==> jblanked/Waveshare/RP2350-Touch-LCD-1.28/examples/ArduinoIDE/test/lcd.c <==
#include "lcd.h"

void lcd_fill_rect(uint16_t x, uint16_t y, uint16_t width, uint16_t height, uint16_t color)
{
    // Bounds clipping
    if (x >= LCD_WIDTH || y >= LCD_HEIGHT)
        return;

    if (x + width > LCD_WIDTH)
        width = LCD_WIDTH - x;
    if (y + height > LCD_HEIGHT)
        height = LCD_HEIGHT - y;

    const uint8_t color_index = lcd_color565_to_332(color);

    // Fast fill using optimized loops
    for (uint16_t py = y; py < y + height; py++)
    {
        for (uint16_t px = x; px < x + width; px++)
        {
            framebuffer[py * LCD_WIDTH + px] = color_index;
        }
    }
}

void lcd_init(bool horizontal)
{
    if (lcd_initialized)
    {
        return; // already initialized
    }

    // initialize the GPIO
    gpio_init(LCD_RST_PIN);
    gpio_init(LCD_DC_PIN);
    gpio_init(LCD_CS_PIN);
    gpio_init(LCD_BL_PIN);

    gpio_set_dir(LCD_RST_PIN, GPIO_OUT);
    gpio_set_dir(LCD_DC_PIN, GPIO_OUT);
    gpio_set_dir(LCD_CS_PIN, GPIO_OUT);
    gpio_set_dir(LCD_BL_PIN, GPIO_OUT);

    gpio_put(LCD_CS_PIN, 1);
    gpio_put(LCD_DC_PIN, 0);
    gpio_put(LCD_BL_PIN, 1);

    // SPI init
    spi_init(LCD_SPI_PORT, LCD_BAUDRATE);
    gpio_set_function(LCD_CLK_PIN, GPIO_FUNC_SPI);
    gpio_set_function(LCD_MOSI_PIN, GPIO_FUNC_SPI);

    // Hardware reset
    lcd_reset();

    // Set the read / write scan direction of the frame memory
    lcd_write_cmd(0x36); // MX, MY, RGB mode

    lcd_write_data(horizontal ? 0xc8 : 0X68); // 0x08 set RGB

    // Set the initialization register
    lcd_write_cmd(0xEF);
    lcd_write_cmd(0xEB);
    lcd_write_data(0x14);

    lcd_write_cmd(0xFE);
    lcd_write_cmd(0xEF);

    lcd_write_cmd(0xEB);
    lcd_write_data(0x14);

    lcd_write_cmd(0x84);
    lcd_write_data(0x40);

    lcd_write_cmd(0x85);
    lcd_write_data(0xFF);

    lcd_write_cmd(0x86);
    lcd_write_data(0xFF);

    lcd_write_cmd(0x87);
    lcd_write_data(0xFF);

    lcd_write_cmd(0x88);
    lcd_write_data(0x0A);

    lcd_write_cmd(0x89);
    lcd_write_data(0x21);

    lcd_write_cmd(0x8A);
    lcd_write_data(0x00);

    lcd_write_cmd(0x8B);
    lcd_write_data(0x80);

    lcd_write_cmd(0x8C);
    lcd_write_data(0x01);

    lcd_write_cmd(0x8D);
    lcd_write_data(0x01);

    lcd_write_cmd(0x8E);
    lcd_write_data(0xFF);

    lcd_write_cmd(0x8F);
    lcd_write_data(0xFF);

    lcd_write_cmd(0xB6);
    lcd_write_data(0x00);
    lcd_write_data(0x20);

    lcd_write_cmd(0x36);
    lcd_write_data(0x08); // Set as vertical screen

    lcd_write_cmd(0x3A);
    lcd_write_data(0x05);

    lcd_write_cmd(0x90);
    lcd_write_data(0x08);
    lcd_write_data(0x08);
    lcd_write_data(0x08);
    lcd_write_data(0x08);

    lcd_write_cmd(0xBD);
    lcd_write_data(0x06);

    lcd_write_cmd(0xBC);
    lcd_write_data(0x00);

    lcd_write_cmd(0xFF);
    lcd_write_data(0x60);
    lcd_write_data(0x01);
    lcd_write_data(0x04);

    lcd_write_cmd(0xC3);
    lcd_write_data(0x13);
    lcd_write_cmd(0xC4);
    lcd_write_data(0x13);

    lcd_write_cmd(0xC9);
    lcd_write_data(0x22);

    lcd_write_cmd(0xBE);
    lcd_write_data(0x11);

    lcd_write_cmd(0xE1);
    lcd_write_data(0x10);
    lcd_write_data(0x0E);

    lcd_write_cmd(0xDF);
    lcd_write_data(0x21);
    lcd_write_data(0x0c);
    lcd_write_data(0x02);

    lcd_write_cmd(0xF0);
    lcd_write_data(0x45);
    lcd_write_data(0x09);
    lcd_write_data(0x08);
    lcd_write_data(0x08);
    lcd_write_data(0x26);
    lcd_write_data(0x2A);

    lcd_write_cmd(0xF1);
    lcd_write_data(0x43);
    lcd_write_data(0x70);
    lcd_write_data(0x72);
    lcd_write_data(0x36);
    lcd_write_data(0x37);
    lcd_write_data(0x6F);

    lcd_write_cmd(0xF2);
    lcd_write_data(0x45);
    lcd_write_data(0x09);
    lcd_write_data(0x08);
    lcd_write_data(0x08);
    lcd_write_data(0x26);
    lcd_write_data(0x2A);

    lcd_write_cmd(0xF3);
    lcd_write_data(0x43);
    lcd_write_data(0x70);
    lcd_write_data(0x72);
    lcd_write_data(0x36);
    lcd_write_data(0x37);
    lcd_write_data(0x6F);

    lcd_write_cmd(0xED);
    lcd_write_data(0x1B);
    lcd_write_data(0x0B);

    lcd_write_cmd(0xAE);
    lcd_write_data(0x77);

    lcd_write_cmd(0xCD);
    lcd_write_data(0x63);

    lcd_write_cmd(0x70);
    lcd_write_data(0x07);
    lcd_write_data(0x07);
    lcd_write_data(0x04);
    lcd_write_data(0x0E);
    lcd_write_data(0x0F);
    lcd_write_data(0x09);
    lcd_write_data(0x07);
    lcd_write_data(0x08);
    lcd_write_data(0x03);

    lcd_write_cmd(0xE8);
    lcd_write_data(0x34);

    lcd_write_cmd(0x62);
    lcd_write_data(0x18);
    lcd_write_data(0x0D);
    lcd_write_data(0x71);
    lcd_write_data(0xED);
    lcd_write_data(0x70);
    lcd_write_data(0x70);
    lcd_write_data(0x18);
    lcd_write_data(0x0F);
    lcd_write_data(0x71);
    lcd_write_data(0xEF);
    lcd_write_data(0x70);
    lcd_write_data(0x70);

    lcd_write_cmd(0x63);
    lcd_write_data(0x18);
    lcd_write_data(0x11);
    lcd_write_data(0x71);
    lcd_write_data(0xF1);
    lcd_write_data(0x70);
    lcd_write_data(0x70);
    lcd_write_data(0x18);
    lcd_write_data(0x13);
    lcd_write_data(0x71);
    lcd_write_data(0xF3);
    lcd_write_data(0x70);
    lcd_write_data(0x70);

    lcd_write_cmd(0x64);
    lcd_write_data(0x28);
    lcd_write_data(0x29);
    lcd_write_data(0xF1);
    lcd_write_data(0x01);
    lcd_write_data(0xF1);
    lcd_write_data(0x00);
    lcd_write_data(0x07);

    lcd_write_cmd(0x66);
    lcd_write_data(0x3C);
    lcd_write_data(0x00);
    lcd_write_data(0xCD);
    lcd_write_data(0x67);
    lcd_write_data(0x45);
    lcd_write_data(0x45);
    lcd_write_data(0x10);
    lcd_write_data(0x00);
    lcd_write_data(0x00);
    lcd_write_data(0x00);

    lcd_write_cmd(0x67);
    lcd_write_data(0x00);
    lcd_write_data(0x3C);
    lcd_write_data(0x00);
    lcd_write_data(0x00);
    lcd_write_data(0x00);
    lcd_write_data(0x01);
    lcd_write_data(0x54);
    lcd_write_data(0x10);
    lcd_write_data(0x32);
    lcd_write_data(0x98);

    lcd_write_cmd(0x74);
    lcd_write_data(0x10);
    lcd_write_data(0x85);
    lcd_write_data(0x80);
    lcd_write_data(0x00);
    lcd_write_data(0x00);
    lcd_write_data(0x4E);
    lcd_write_data(0x00);

    lcd_write_cmd(0x98);
    lcd_write_data(0x3e);
    lcd_write_data(0x07);

    lcd_write_cmd(0x35);
    lcd_write_cmd(0x21);

    lcd_write_cmd(0x11);
    sleep_ms(120);
    lcd_write_cmd(0x29);
    sleep_ms(20);

    // init palette
    for (int i = 0; i < 256; i++)
    {
        // Extract RGB332 components
        uint8_t r3 = (i >> 5) & 0x07; // 3 bits for red
        uint8_t g3 = (i >> 2) & 0x07; // 3 bits for green
        uint8_t b2 = i & 0x03;        // 2 bits for blue

        // Convert to 8-bit RGB
        uint8_t r8 = (r3 * 255) / 7; // Scale 3-bit to 8-bit
        uint8_t g8 = (g3 * 255) / 7; // Scale 3-bit to 8-bit
        uint8_t b8 = (b2 * 255) / 3; // Scale 2-bit to 8-bit

        // Convert to RGB565 for the palette
        palette[i] = lcd_color332_to_565(r8, g8, b8);
    }

    lcd_backlight_init(); // Initialize backlight PWM

    lcd_set_font(LCD_DEFAULT_FONT_SIZE); // Set default font

    lcd_initialized = true; // set the flag to indicate initialization is done
}

void lcd_write_cmd(uint8_t cmd)
{
    gpio_put(LCD_DC_PIN, 0);
    spi_write_blocking(LCD_SPI_PORT, &cmd, 1);
}

void lcd_write_data(uint8_t data)
{
    gpio_put(LCD_DC_PIN, 1);
    spi_write_blocking(LCD_SPI_PORT, &data, 1);
}
